Bug 923170 - Require GCC 4.6.x before enabling strong enum support. r=Waldo